[gd_scene load_steps=2 format=2]

[ext_resource path="res://Util/UIBorder.gd" type="Script" id=1]

[node name="BorderLine" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineUp" type="Line2D" parent="."]
width = 0.0

[node name="LineDown" type="Line2D" parent="."]
width = 0.0

[node name="LineRight" type="Line2D" parent="."]
width = 0.0

[node name="LineLeft" type="Line2D" parent="."]
width = 0.0
